# si

./: .gitignore  .gitmodules  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
include/: doctree.h  smbios.h
src/: Makefile.am
src/libs/: Makefile.am
src/libs/smbios/: Makefile.am  smbios.c  smbios.h
src/si/: Makefile.am  main.c
